[package]
name = "httptester_server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A real-time webhook testing tool with browser push notifications"
repository = "https://github.com/SalindaGunarathna/httptester"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
redb = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
web-push = { version = "0.9", default-features = false, features = ["hyper-client"] }
